--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -216,6 +216,57 @@ jobs:
             dist/paqet_*.ipk
           retention-days: 1
 
+  build-openwrt-ax6s:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v5
+
+      - name: Build OpenWrt IPKs (23.05.2 mediatek/mt7622)
+        shell: bash
+        run: |
+          set -euxo pipefail
+
+          OWRT_VER="23.05.2"
+          TARGET_PATH="mediatek/mt7622"
+          BASE_URL="https://downloads.openwrt.org/releases/${OWRT_VER}/targets/${TARGET_PATH}"
+
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            build-essential clang flex bison gawk gettext \
+            libncurses-dev libssl-dev python3 python3-distutils rsync unzip zlib1g-dev file wget curl
+
+          SDK_FILE="$(curl -fsSL "${BASE_URL}/" | grep -oE 'openwrt-sdk-[^" ]+\.Linux-x86_64\.tar\.xz' | head -n1)"
+          test -n "$SDK_FILE"
+          curl -fL "${BASE_URL}/${SDK_FILE}" -o sdk.tar.xz
+
+          SDK_DIR="$(tar -tf sdk.tar.xz | head -n1 | cut -d/ -f1)"
+          tar -xf sdk.tar.xz
+          cd "$SDK_DIR"
+
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a
+
+          # copy packages into SDK
+          rm -rf package/paqet package/luci-app-paqet
+          cp -r "$GITHUB_WORKSPACE/openwrt/paqet" package/paqet
+          cp -r "$GITHUB_WORKSPACE/openwrt/luci-app-paqet" package/luci-app-paqet
+
+          make defconfig
+          make package/paqet/compile V=s
+          make package/luci-app-paqet/compile V=s
+
+          mkdir -p "$GITHUB_WORKSPACE/dist"
+          find bin/packages -name 'paqet_*.ipk' -o -name 'luci-app-paqet_*.ipk' -exec cp -v {} "$GITHUB_WORKSPACE/dist/" \;
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: openwrt-ax6s-ipks
+          path: dist/*.ipk
+          retention-days: 1
+
   build-windows:
     runs-on: windows-latest
     strategy:
@@ -344,7 +395,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [build-linux, build-darwin, build-windows, build-openwrt-mt7622]
+    needs: [build-linux, build-darwin, build-windows, build-openwrt-mt7622, build-openwrt-ax6s]
     if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Download all build artifacts
